Added Junit and IT test cases.